--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -1,4 +1,6 @@
 "HOME","主页"
+"Blog","博客"
+"VIEW MY CART","查看购物车"
 "%s Item(s)","%s 个项目"
 "%s-%s of %s","%s-%s / %s"
 "&copy; 2012 Magento Demo Store. All Rights Reserved.","&copy; 2012 Magento 演示商店。保留所有权利。"
