--- a/locale/zh_CN/Mage_Tax.csv
+++ b/locale/zh_CN/Mage_Tax.csv
@@ -2,6 +2,7 @@
 "-- Please Select --","-- 请选择 --"
 "Add New Class","添加新类"
 "About","关于"
+"Blog","博客"
 "Add New Tax Rate","添加新税率"
 "Add New Tax Rule","添加新税率规则"
 "After Discount","折扣后"
