--- a/locale/zh_CN/Mage_Tax.csv
+++ b/locale/zh_CN/Mage_Tax.csv
@@ -3,6 +3,8 @@
 "Add New Class","添加新类"
 "About","关于"
 "Blog","博客"
+"HOME","主页"
+"VIEW MY CART","查看购物车"
 "Add New Tax Rate","添加新税率"
 "Add New Tax Rule","添加新税率规则"
 "After Discount","折扣后"
