--- a/locale/zh_CN/Mage_Sales.csv
+++ b/locale/zh_CN/Mage_Sales.csv
@@ -270,7 +270,7 @@
 "Hold","暂挂"
 "Hold action is not available.","暂挂操作不可用。"
 "Hold order","暂挂订单"
-"Home","Home"
+"Home","主页"
 "ID","ID"
 "ID #","ID#"
 "IPN ""Refunded"". Refund issued by merchant. Registered notification about refunded amount of %s. Transaction ID: ""%s"". Credit Memo has not been created. Please create offline Credit Memo.","IPN“已退款”。退款由商家发起。有关退款金额 %s 的通知已注册。交易 ID：“%s”。尚未创建贷项凭证。请创建离线贷项凭证。"
