--- a/locale/zh_CN/Mage_XmlConnect.csv
+++ b/locale/zh_CN/Mage_XmlConnect.csv
@@ -514,7 +514,7 @@
 "Item has been added to cart.","商品已被添加到购物车。"
 "Item has been deleted from cart.","商品已从购物车中删除。"
 "Item has been removed from wishlist.","商品已从愿望清单中删除。"
-"Items","Items"
+"Items","项目"
 "Items were updated. But can\'t update wishlist.","商品已更新。但无法更新愿望清单。"
 "Keep your image size below %s KB for optimal performance.","Keep your image size below %s KB for optimal performance."
 "Key","密钥"
