我的账户翻译兼容My account

--- a/locale/zh_CN/Mage_Catalog.csv
+++ b/locale/zh_CN/Mage_Catalog.csv
@@ -418,6 +418,7 @@
 "Multi update product","多次更新产品"
 "Must be in the allowed values list.","必须位于允许的值列表中。"
 "My Account","我的帐户"
+"My account","我的帐户"
 "N/A","N/A"
 "Name","姓名"
 "Name in %s","%s的名称"
