--- a/locale/zh_CN/Mage_Customer.csv
+++ b/locale/zh_CN/Mage_Customer.csv
@@ -213,6 +213,7 @@
 "Missing website, skipping the record, line: %s","网站丢失，跳过该记录，行：%s"
 "Month","月"
 "My Account","我的帐户"
+"My account","我的帐户"
 "My Account Wrapper","我的帐户包装"
 "My Dashboard","我的仪表板"
 "My Orders","我的订单"
