--- a/locale/zh_CN/Mage_Adminhtml.csv
+++ b/locale/zh_CN/Mage_Adminhtml.csv
@@ -551,6 +551,7 @@
 "Most Viewed Products","最受关注商品"
 "Multiple Select","多选"
 "My Account","我的帐户"
+"My account","我的帐户"
 "My Applications","我的应用程序"
 "N/A","N/A"
 "NOTICE","注意"
