我的帐户 翻译

--- a/locale/zh_CN/Mage_XmlConnect.csv
+++ b/locale/zh_CN/Mage_XmlConnect.csv
@@ -622,7 +622,8 @@
 "More Info","更多信息"
 "More Tabs","更多选项卡"
 "Most Viewed Products","Most Viewed Products"
-"My Account","My Account"
+"My Account","我的帐户"
+"My account","我的帐户"
 "My Downloadable Products","My Downloadable Products"
 "My Orders","My Orders"
 "My Wishlist","My Wishlist"
