--- a/locale/zh_CN/Mage_GiftMessage.csv
+++ b/locale/zh_CN/Mage_GiftMessage.csv
@@ -1,6 +1,6 @@
 "Add","添加"
 "Add gift message for shopping cart","为购物车添加礼品消息"
-"Add gift messages for quote item of shopping cart","为购物车中的报价项目添加礼品消息"
+"Add gift messages for quote item of shopping cart","为购物车中的选中项目添加礼品消息"
 "Add gift messages to products of shopping cart","添加礼品消息到购物车中的产品"
 "Add gift options","添加礼品选项"
 "Add gift options for Individual Items","为单个项目添加礼品选项"
