--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -18,12 +18,12 @@
 "Allow Guest Checkout","允许来宾结账"
 "Already registered?","已注册？"
 "An error occurred in the process of payment","支付流程发生错误"
-"An error occurred while deleting this condition.","当删除该条件时发生错误。"
-"An error occurred while saving this condition.","当保存该条件时发生错误。"
+"An error occurred while deleting this condition.","删除该条件时发生错误。"
+"An error occurred while saving this condition.","保存该条件时发生错误。"
 "Apply","应用"
 "Apply Coupon","应用优惠券"
-"Are you sure you want to leave this page? You will need to go through the checkout steps again.","您确认要离开此页面吗？您需要重新完成一次结账步骤。"
-"Are you sure you would like to remove this item from the shopping cart?","您确认要从购物车中删除该项目吗？"
+"Are you sure you want to leave this page? You will need to go through the checkout steps again.","您确认要离开此页面吗？如果离开，您将需要重新完成一次结账步骤。"
+"Are you sure you would like to remove this item from the shopping cart?","您确认要从购物车中删除该商品吗？"
 "Back","返回"
 "Back to Billing Information","返回到账单信息"
 "Back to Select Addresses","返回到选择地址"
@@ -33,20 +33,20 @@
 "Billing Address","账单地址"
 "Billing Information","账单信息"
 "Billing Information - %s","账单信息 - %s"
-"Can not remove the item.","无法移除此项目。"
-"Can not save item.","无法保存项目。"
+"Can not remove the item.","无法移除此商品。"
+"Can not save item.","无法保存商品。"
 "Cancel","取消"
 "Cancel Coupon","取消优惠券"
-"Cannot add item to the shopping cart.","无法添加项目到购物车。"
-"Cannot add the item to shopping cart","无法添加该项目到购物车"
-"Cannot add the item to shopping cart.","无法添加该项目到购物车。"
+"Cannot add item to the shopping cart.","无法添加商品到购物车。"
+"Cannot add the item to shopping cart","无法添加该商品到购物车"
+"Cannot add the item to shopping cart.","无法添加该商品到购物车。"
 "Cannot apply the coupon code.","无法应用优惠代码。"
 "Cannot configure product.","无法配置产品。"
 "Cannot open the overview page","无法打开概览页面"
-"Cannot process the item.","无法处理该项目。"
-"Cannot remove the item.","无法移除项目。"
+"Cannot process the item.","无法处理该商品。"
+"Cannot remove the item.","无法移除商品。"
 "Cannot update shopping cart.","无法更新购物车。"
-"Cannot update the item.","无法更新该项目。"
+"Cannot update the item.","无法更新该商品。"
 "Card Verification Number Visual Reference","信用卡验证号码 视觉参考"
 "Cart","购物车"
 "Cart Product API","购物车产品 API"
@@ -111,12 +111,12 @@
 "Edit Address","编辑地址"
 "Edit Billing Address","编辑账单地址"
 "Edit Condition","编辑条件"
-"Edit Items","编辑项目"
+"Edit Items","编辑商品"
 "Edit Shipping Address","编辑运送地址"
 "Edit Terms and Conditions","编辑条款和条件"
 "Edit Your Cart","编辑您的购物车"
-"Edit item","编辑项目"
-"Edit item parameters","编辑项目参数"
+"Edit item","编辑商品"
+"Edit item parameters","编辑商品参数"
 "Email Address","编辑电子邮件地址"
 "Empty Cart","清空购物车"
 "Empty Shopping Cart Content Before","清空购物车内容前："
@@ -131,7 +131,7 @@
 "Excl. Tax","不含税"
 "Fast and easy check out","方便快捷的结账"
 "Fax","传真"
-"Forgot an Item?","忘记某个项目？"
+"Forgot an Item?","忘记某个商品？"
 "Forgot your password?","忘记您的密码？"
 "Get a Quote","获得报价"
 "Get list of available payment methods","获得可用支付方法的列表"
@@ -150,18 +150,18 @@
 "Invalid email address ""%s""","无效的电子邮件地址 ""%s"""
 "Invalid method: %s","无效的方法：%s"
 "Invalid shipping method.","运送方法无效。"
-"Item not found or already ordered","无法找到项目，或项目已被订购"
-"Item was removed successfully.","项目已成功移除。"
-"Item was updated successfully.","项目已成功更新。"
-"Items","项目"
-"Items After","项目晚于"
-"Items Before","之前的项目"
+"Item not found or already ordered","无法找到商品，或商品已被订购"
+"Item was removed successfully.","商品已成功移除。"
+"Item was updated successfully.","商品已成功更新。"
+"Items","商品"
+"Items After","商品晚于"
+"Items Before","之前的商品"
 "Load customer quote error","载入客户报价错误"
 "Loading next step...","正在载入下一步..."
 "Login","登录"
 "Login/Registration Before","登录/注册早于"
 "Manage Terms and Conditions","管理条款与协议"
-"Maximum Display Recently Added Item(s)","最大显示近期添加的项目"
+"Maximum Display Recently Added Item(s)","最大显示近期添加的商品"
 "Maximum qty allowed for Shipping to multiple addresses is %s","运送到多个地址所允许的最大数量为 %s"
 "Mini-cart promotion block","迷你购物车促销区块"
 "Minimum order amount is %s","最小订购数量为 %s"
@@ -182,8 +182,8 @@
 "Multishipping Checkout Shipping Information Step","多重运送结账运送信息步骤"
 "Multishipping Checkout Success","多重运送结账成功"
 "My Cart","我的购物车"
-"My Cart (%s item)","我的购物车（%s 个项目）"
-"My Cart (%s items)","我的购物车（%s 个项目）"
+"My Cart (%s item)","我的购物车（%s 个商品）"
+"My Cart (%s items)","我的购物车（%s 个商品）"
 "My Cart Extra Actions","我的购物车额外行为"
 "My Cart Link","我的购物车链接"
 "New Address","新地址"
@@ -243,17 +243,17 @@
 "Qty:","数量："
 "Quantity was recalculated from %d to %d","数量已重新计算，从 %d 到 %d"
 "Quote Lifetime (days)","报价生命期（天）"
-"Quote item does not exist.","报价项目不存在。"
-"Quote item is not found.","报价项目未找到。"
-"Recently added item(s)","最近添加的项目"
+"Quote item does not exist.","报价商品不存在。"
+"Quote item is not found.","报价商品未找到。"
+"Recently added item(s)","最近添加的商品"
 "Register","注册"
 "Register and save time!","注册并节约时间！"
 "Register to Create an Account","注册以创建帐户"
 "Register with us for future convenience:","在这里注册以后可以更方便："
-"Remove Item","删除项目"
-"Remove This Item","删除该内容"
+"Remove Item","删除商品"
+"Remove This Item","删除该商品"
 "Remove coupon code from shopping cart","从购物车中删除优惠代码"
-"Remove item","删除项目"
+"Remove item","删除商品"
 "Remove product from shopping cart","从购物车中删除产品"
 "Remove product(s) from shopping cart","从购物车中删除产品"
 "Require Customer To Be Logged In To Checkout","需要顾客登录才能结账"
@@ -278,19 +278,19 @@
 "Set customer for shopping cart","设置客户的购物车"
 "Set customer's addresses in shopping cart","设置购物车中客户的地址"
 "Set payment method","设置支付方法"
-"Set shipping method","设置运送方式"
-"Ship to Multiple Addresses","运送到多个地址"
+"Set shipping method","设置配送方式"
+"Ship to Multiple Addresses","配送到多个地址"
 "Ship to different address","送货到不同地址"
-"Ship to this address","送货到这个地址"
+"Ship to this address","配送到这个地址"
 "Shipping Address","送货地址"
-"Shipping Information","运送信息"
-"Shipping Method","运送方式"
-"Shipping Methods","运送方式"
-"Shipping To","运送至"
-"Shipping information","运送信息"
-"Shipping method has not been selected yet","运送方式尚未被选择"
-"Shipping methods in shopping cart","购物车中的运送方式"
-"Shipping selection is not applicable.","运送选择不适用。"
+"Shipping Information","配送信息"
+"Shipping Method","配送方式"
+"Shipping Methods","配送方式"
+"Shipping To","配送至"
+"Shipping information","配送信息"
+"Shipping method has not been selected yet","配送方式尚未被选择"
+"Shipping methods in shopping cart","购物车中的配送方式"
+"Shipping selection is not applicable.","配送选择不适用。"
 "Shopping Cart","购物车"
 "Shopping Cart Form Before","购物车形成以前"
 "Shopping Cart Items After","后续购物车项目"
@@ -343,17 +343,17 @@
 "Use Billing Address","使用账单地址"
 "VAT Number","VAT 编号"
 "View Shopping Cart","查看购物车"
-"Visible items in minicart","迷你购物车中的可见项目"
+"Visible items in minicart","迷你购物车中的可见商品"
 "We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress.","我们正在处理您的订单，您将很快收到包含订单详情的电子邮件。当订单运送后，您会收到另一封邮件，并可使用邮件中的链接来追踪运送进度。"
 "What&#39;s this?","这是什么？"
 "What's this?","这是什么？"
-"You have no items in your shopping cart.","您的购物车内没有物品。"
-"You will receive an order confirmation email with details of your order and a link to track its progress.","您将会收到一份内含订单详细信息和可查询进展情况链接的确认邮件"
+"You have no items in your shopping cart.","您的购物车内没有商品。"
+"You will receive an order confirmation email with details of your order and a link to track its progress.","您将会收到一份内含订单详细信息和进展情况链接的确认邮件"
 "Your Checkout Progress","您的结帐流程"
 "Your billing agreement # is: %s.","您的账单编号为： %s"
 "Your order # is: %s.","您的订单编号为： %s"
-"Your order cannot be completed at this time as there is no payment methods available for it.","由于付款方法不可用，现在无法完成您的订单。"
-"Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","由于送货方法不可用，现在无法完成您的订单。请更改您的收货地址。"
+"Your order cannot be completed at this time as there is no payment methods available for it.","由于付款方法遇到问题，现在无法完成您的订单。"
+"Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","由于送货方法遇到问题，现在无法完成您的订单。请更改您的收货地址。"
 "Your order has been received.","我们已经收到您的订单。"
 "Your order number is ","您的订单号是"
 "Your recurring payment profiles:","您的付款档案："
