--- a/locale/zh_CN/Mage_Oauth.csv
+++ b/locale/zh_CN/Mage_Oauth.csv
@@ -1,5 +1,5 @@
-"%name% '%value%' is too long. It must has length %min% symbols.","%name% '%value%' is too long. It must has length %min% symbols."
-"%name% '%value%' is too short. It must has length %min% symbols.","%name% '%value%' is too short. It must has length %min% symbols."
+"%name% '%value%' is too long. It must has length %min% symbols.","%name% '%value%' 太长. 它的长度必须是 %min% 字符."
+"%name% '%value%' is too short. It must has length %min% symbols.","%name% '%value%' 太短. 它的长度必须是 %min% 字符."
 "* Required Fields","*必要字段"
 "<strong>%s</strong> requests access to your account","<strong>%s</strong> requests access to your account"
 "Admin","管理员"
@@ -18,10 +18,10 @@
 "Application ""%s"" has been enabled.","Application ""%s"" has been enabled."
 "Application ""%s"" has been revoked.","Application ""%s"" has been revoked."
 "Application Name","应用程序名称"
-"Application not found.","Application not found."
-"Are you sure you want to delete this application?","Are you sure you want to delete this application?"
-"Are you sure you want to disable this application?","Are you sure you want to disable this application?"
-"Are you sure you want to enable this application?","Are you sure you want to enable this application?"
+"Application not found.","找不到应用程序"
+"Are you sure you want to delete this application?","您确定要删除该应用?"
+"Are you sure you want to disable this application?","您确定要使该应用失效?"
+"Are you sure you want to enable this application?","您确定要使该应用生效？"
 "Authorization confirmed","Authorization confirmed"
 "Authorization confirmed.","Authorization confirmed."
 "Authorize","Authorize"
