--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -84,3 +84,133 @@ You must have JavaScript enabled in your browser to utilize the functionality of
 Your Language,您的语言
 Your Language:,您的语言：
 per page,每页
+Snacks & Chips,休闲零食
+Candies & Chocolate,糖果巧克力
+Chips,薯片
+Rice Crust,米果锅巴
+Popcorn,爆米花
+Shrimp Chips,虾条虾片
+Other Puffed Food,其他膨化食品
+Meat Snacks,肉类零食
+Seafood Snacks,海味小食
+Vegetarian Snack,素食小食
+Dry fruits and vegetables,脱水蔬果干
+Dried Tofu,豆干
+Jelly,果冻
+Pudding,布丁
+Others,其他
+Chocolate,巧克力
+Hard Candies,硬糖
+Soft Sweets,软糖
+Creamy Candy,奶糖
+Marshmallow,棉花糖
+Throat Sweets,润喉糖
+Gum,口香糖
+Bonbon,夹心糖
+Lollipop,棒棒糖
+Biscuit,饼干
+Cookie,曲奇
+Wafer,威化
+Pineapple Cake,凤梨酥
+Bread,面包
+Cake with Filling,泡芙
+Custard Pie,蛋黄派
+Chocolate Pie,巧克力派
+Sachima Cookies,沙琪玛
+Cake,蛋糕
+Egg Rolls,蛋卷
+Moon Cake,月饼
+Almond,杏仁
+Cashew Nut,腰果
+Melon Seeds,瓜子
+Peanuts,花生
+Chestnut,甘栗
+Pine Nut,松子
+Macadamia Nut,夏威夷果
+Pistachio,开心果
+Raisin,葡萄干
+Hawthorn & Preserved Fruits,山楂蜜饯
+Jujube,枣
+Beer,啤酒
+Rice Cooking Wine,米酒
+Wine Vinegar,酒醋
+Plant Protein Drinks,植物蛋白饮料
+Fruit and Vegetable Juice,果蔬汁
+water,水
+Milk Beverage,乳饮料
+milk tea,奶茶
+Coffee Beverage,咖啡饮料
+Tea Beverage,茶饮料
+Tea,茶
+Coffee,咖啡
+Reconstituted Juice,冲饮果汁
+Milk Powder,奶粉
+Bee Product,蜂制品
+Soymilk Powder,豆浆粉
+Chocolate Powder,巧克力粉
+Honey Pomelo Tea,蜂蜜柚子茶
+Fruity Milk Tea,奶茶
+Lotus Root Starch,藕粉
+Sesame Paste,芝麻糊
+Walnut Paste,核桃糊
+Rice,米
+Noodles,面条
+Pasta,米线
+pho,粉丝
+Rice noodles,米粉
+Beans,杂粮
+Mushrooms,菌菇类
+Dried food,南北干货
+Dried seafood,腌干水产品
+Flour,面粉
+Salt,盐
+Soy Sauce,酱油
+Sugar,糖
+Vinegar,醋
+Gourmet Powder,味精鸡精
+Seasoning,调味
+Cooking Oil,食用油
+Hot Pot Seasoning,火锅料
+Fruit Jam,果酱
+Chocolate Jam,巧克力酱
+Peanut jam,花生酱
+luncheon meat,午餐肉
+Instant noodles,方便面
+Instant soup,速食汤
+Instant congee,速食粥
+Instant rice,速食饭
+Instant pho,速食粉丝
+Bean cured,腐乳
+Pickled vegetable,榨菜
+Canned Food,罐头
+Mix oat congee,八宝粥
+Cereal,麦片
+Egg products,蛋制品
+Toothbrush,牙刷
+Toothpaste,牙膏
+Shaver,剃刀
+Facial Cleanser,洗面奶
+Body Wash,沐浴露
+Shampoo,洗发水
+Condition,护发素
+Skin Care,美容护肤
+Hair Styling,美发
+Female Products,女性用品
+Tissue,纸
+Hand Sanitizer,洗手液
+Soap,肥皂
+Laundry Detergent,洗衣液
+Dishwashing,洗洁精
+Home Clean,家庭清洁
+Towel,毛巾
+Slipper,拖鞋
+Carpet,地毯
+Storage,收纳
+Pot,锅
+Dinnerware and Flatware,碗碟勺筷
+Cups,杯子
+New year stuff,新年物品
+Subilose,燕窝
+Sugar-free Low-sugar Food,无糖、低糖食品
+Nutrition,滋补
+Ginseng,参类
