挂起->处理中

--- a/locale/zh_CN/Mage_Catalog.csv
+++ b/locale/zh_CN/Mage_Catalog.csv
@@ -463,7 +463,7 @@
 "PM","PM"
 "Page Title Separator","页面标题分隔器"
 "Parent Category","父分类"
-"Pending","挂起"
+"Pending","处理中"
 "Pending Reviews RSS","挂起评测RSS"
 "Percentage","百分率"
 "Please add rows to option.","请添加选项行。"
