--- a/locale/zh_CN/Mage_Customer.csv
+++ b/locale/zh_CN/Mage_Customer.csv
@@ -263,7 +263,7 @@
 "Password forgotten","密码忘记"
 "Password:","密码："
 "Paused","已暂停"
-"Pending","挂起"
+"Pending","处理中"
 "Per Website","每网站"
 "Personal Information","个人信息"
 "Please enter a number 1 or greater in this field.","请在该字段输入数字1或更大值。"
