--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -214,3 +214,12 @@ Subilose,燕窝
 Sugar-free Low-sugar Food,无糖、低糖食品
 Nutrition,滋补
 Ginseng,参类
+Cookies & Cakes,饼干糕点
+"Nuts, Seeds & Dry Fruits",坚果蜜饯
+Drinks & Alcohol-free Beer,酒水饮料
+"Tea, Coffee & Drink Mixes",冲调饮品
+Pantry,粮油调味
+Instant food,方便速食
+Personal care,个人护理
+Household Supplies,生活日用
+Nutrition & Supplements,营养保健
