--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -136,9 +136,9 @@ Rice Cooking Wine,米酒
 Wine Vinegar,酒醋
 Plant Protein Drinks,植物蛋白饮料
 Fruit and Vegetable Juice,果蔬汁
-water,水
-Milk Beverage,乳饮料
-milk tea,奶茶
+Water,水
+Milk Drink,乳饮料
+Milk tea,奶茶
 Coffee Beverage,咖啡饮料
 Tea Beverage,茶饮料
 Tea,茶
@@ -150,14 +150,14 @@ Soymilk Powder,豆浆粉
 Chocolate Powder,巧克力粉
 Honey Pomelo Tea,蜂蜜柚子茶
 Fruity Milk Tea,奶茶
-Lotus Root Starch,藕粉
+Lotus Root,藕粉
 Sesame Paste,芝麻糊
 Walnut Paste,核桃糊
 Rice,米
 Noodles,面条
 Pasta,米线
-pho,粉丝
-Rice noodles,米粉
+Pho,粉丝
+Rice Noodles,米粉
 Beans,杂粮
 Mushrooms,菌菇类
 Dried food,南北干货
