带&的翻译修正

--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -129,7 +129,7 @@ Pine Nut,松子
 Macadamia Nut,夏威夷果
 Pistachio,开心果
 Raisin,葡萄干
-Hawthorn & Preserved Fruits,山楂蜜饯
+"Hawthorn &amp; Preserved Fruits",山楂蜜饯
 Jujube,枣
 Beer,啤酒
 Rice Cooking Wine,米酒
@@ -138,7 +138,7 @@ Plant Protein Drinks,植物蛋白饮料
 Fruit and Vegetable Juice,果蔬汁
 Water,水
 Milk Drink,乳饮料
-Milk tea,奶茶
+Milk Tea,奶茶
 Coffee Beverage,咖啡饮料
 Tea Beverage,茶饮料
 Tea,茶
