--- a/locale/zh_CN/Mage_XmlConnect.csv
+++ b/locale/zh_CN/Mage_XmlConnect.csv
@@ -928,7 +928,7 @@
 "Social Networking","社交网络"
 "Some emails were not sent.","某些邮件未发送"
 "Sorry, no payment options are available for this order at this time.","对不起，该订单目前没有可用支付选项。"
-"Sorry, no quotes are available for this order at this time.","抱歉，当前该订单中没有报价可用。"
+"Sorry, no quotes are available for this order at this time.","抱歉，该地址暂时不支持送货。"
 "Sorry, there are no items in this category.","Sorry, there are no items in this category."
 "Special","Special"
 "Special Excl. Tax","Special Excl. Tax"
