购物车悬浮框。view my cart翻译。paypal插件显示注销

--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -55,6 +55,7 @@
 "Change Billing Address","更改账单地址"
 "Checkbox Text","复选框文本"
 "Checkout","结账"
+"view my cart","购物车"
 "Checkout Conditions","支付条件"
 "Checkout Forms Extra","结账表单附加"
 "Checkout Method","支付方法"
