首页标签翻译

--- a/locale/zh_CN/Mage_Page.csv
+++ b/locale/zh_CN/Mage_Page.csv
@@ -224,3 +224,7 @@ Personal care,个人护理
 Household Supplies,生活日用
 Nutrition & Supplements,营养保健
 "Cereal &amp; Oil",粮油
+Recommend Brand,推荐品牌
+HOT,热卖
+NEW,新上
+DISCOUNT,打折
