翻译tax->传真改成税

--- a/locale/zh_CN/Mage_Adminhtml.csv
+++ b/locale/zh_CN/Mage_Adminhtml.csv
@@ -941,7 +941,7 @@
 "System busy","系统忙碌"
 "Tags","标签"
 "Target Path","目标路径"
-"Tax","传真"
+"Tax","税"
 "Tb","Tb"
 "Template","模板"
 "Template Content","模板内容"
