--- a/locale/zh_CN/Mage_Reports.csv
+++ b/locale/zh_CN/Mage_Reports.csv
@@ -148,7 +148,7 @@
 "Tag Use","标签的使用"
 "Tags Submitted by %s","由%s 提交的标签"
 "Tags submitted to %s","由%s 提交的标签"
-"Tax","传真"
+"Tax","税"
 "Title","标题"
 "To","发送至"
 "Total","总数"
