--- a/locale/zh_CN/Mage_Sales.csv
+++ b/locale/zh_CN/Mage_Sales.csv
@@ -730,7 +730,7 @@
 "Suspected Fraud","欺诈嫌疑"
 "Suspend","挂起"
 "Suspended","暂挂"
-"Tax","传真"
+"Tax","税"
 "Tax Amount","税额"
 "Tax Percent","税率"
 "Telephone","电话"
