--- a/locale/zh_CN/Mage_Catalog.csv
+++ b/locale/zh_CN/Mage_Catalog.csv
@@ -682,7 +682,7 @@
 "Synonym For","同义词"
 "System Properties","系统属性"
 "Tag Name","标签名称"
-"Tax","传真"
+"Tax","税"
 "Template","模板"
 "Text","文字"
 "The Flat Catalog module has a limit of %2\$d filterable and/or sortable attributes. Currently there are %1\$d of them. Please reduce the number of filterable/sortable attributes in order to use this module","平坦分类模块被限制为 %2\$d 个筛选器和/或可排序属性。目前已经使用了 %1\$d 个。为了使用该模块，请减少所用筛选器/排序属性的数量"
