--- a/locale/zh_CN/Mage_Rss.csv
+++ b/locale/zh_CN/Mage_Rss.csv
@@ -47,7 +47,7 @@
 "Subtotal","小计"
 "Summary of review: %s <br/>","评论摘要：%s <br/>"
 "Tags Products","标记产品"
-"Tax","传真"
+"Tax","税"
 "There are no Rss Feeds","没有RSS源"
 "To:","至："
 "Top Level Category","顶级分类"
