--- a/locale/zh_CN/Mage_XmlConnect.csv
+++ b/locale/zh_CN/Mage_XmlConnect.csv
@@ -989,7 +989,7 @@
 "Swipe a product to reveal more options","Swipe a product to reveal more options"
 "T-Shirts","T恤"
 "Tabs","选项卡"
-"Tax","传真"
+"Tax","税"
 "Telephone","电话"
 "Tell a Friend","告诉朋友"
 "Tell a Friend is disabled.","告诉朋友功能被禁用。"
