--- a/locale/zh_CN/Mage_XmlConnect.csv
+++ b/locale/zh_CN/Mage_XmlConnect.csv
@@ -411,7 +411,7 @@
 "Facebook API","Facebook API"
 "Facebook Application ID","反馈应用程序ID"
 "Facebook post failed...","Facebook post failed..."
-"Fax","传真"
+"Fax","税"
 "File can\'t be uploaded.","文件无法上传。"
 "File doesn\'t exist ""%s"".","文件不存在 ""%s""。"
 "Filter","Filter"
