--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -131,7 +131,7 @@
 "Estimate Shipping and Tax","预计运费和税费"
 "Excl. Tax","不含税"
 "Fast and easy check out","方便快捷的结账"
-"Fax","传真"
+"Fax","税"
 "Forgot an Item?","忘记某个商品？"
 "Forgot your password?","忘记您的密码？"
 "Get a Quote","获得报价"
