--- a/locale/zh_CN/Mage_Customer.csv
+++ b/locale/zh_CN/Mage_Customer.csv
@@ -146,7 +146,7 @@
 "Entity collection is expected.","预期为实体集合。"
 "Excel XML","Excel XML"
 "Failed to confirm customer account.","确认客户帐户失败。"
-"Fax","传真"
+"Fax","税"
 "First Name","名字"
 "Forgot Email Template","忘记邮件模板"
 "Forgot Password","忘记密码"
