--- a/locale/zh_CN/Mage_Persistent.csv
+++ b/locale/zh_CN/Mage_Persistent.csv
@@ -24,7 +24,7 @@
 "Enable Persistence","启用保留"
 "Fast and easy check out","方便快捷的结账"
 "Faster checkout","更快速结账"
-"Fax","传真"
+"Fax","税"
 "Forgot Your Password?","忘记您的密码？"
 "Forgot your password?","忘记您的密码？"
 "General Options","常规选项"
