翻译注销改退出

--- a/locale/zh_CN/Mage_Adminhtml.csv
+++ b/locale/zh_CN/Mage_Adminhtml.csv
@@ -506,7 +506,7 @@
 "Local/Remote Server","本地/远程服务器"
 "Locale","区域"
 "Log In","登录"
-"Log Out","注销"
+"Log Out","退出"
 "Log in to Admin Panel","登录到管理面板"
 "Log in to use <strong>%s</strong>","登录以使用 <strong>%s</strong>"
 "Log into Magento Admin Page","登录到Magento管理页面"
