--- a/locale/zh_CN/Mage_Customer.csv
+++ b/locale/zh_CN/Mage_Customer.csv
@@ -194,7 +194,7 @@
 "Leave empty for default (2). Valid range: 1-4","留空可使用默认值（2）.有效范围：1-4"
 "Lifetime Sales","终生销售"
 "Log In","登录"
-"Log Out","注销"
+"Log Out","退出"
 "Login","登录"
 "Login Information","登录信息"
 "Login Options","登录选项"
