修改购物车文字
修改购物车文字

--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -1,4 +1,4 @@
-"VIEW MY CART","查看购物车"
+﻿"VIEW MY CART","查看购物车"
 "%s was added to your shopping cart.","%s 已添加到您的购物车。"
 "%s was updated in your shopping cart.","您的购物车中的 %s 已更新。"
 "* Required Fields","*必要字段"
@@ -21,7 +21,7 @@
 "An error occurred while deleting this condition.","删除该条件时发生错误。"
 "An error occurred while saving this condition.","保存该条件时发生错误。"
 "Apply","应用"
-"Apply Coupon","应用优惠券"
+"Apply Coupon","应用优惠码"
 "Are you sure you want to leave this page? You will need to go through the checkout steps again.","您确认要离开此页面吗？如果离开，您将需要重新完成一次结账步骤。"
 "Are you sure you would like to remove this item from the shopping cart?","您确认要从购物车中删除该商品吗？"
 "Back","返回"
