修改购物车优惠券文字
修改购物车优惠券文字

--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -36,7 +36,7 @@
 "Can not remove the item.","无法移除此商品。"
 "Can not save item.","无法保存商品。"
 "Cancel","取消"
-"Cancel Coupon","取消优惠券"
+"Cancel Coupon","取消优惠码"
 "Cannot add item to the shopping cart.","无法添加商品到购物车。"
 "Cannot add the item to shopping cart","无法添加该商品到购物车"
 "Cannot add the item to shopping cart.","无法添加该商品到购物车。"
@@ -125,7 +125,7 @@
 "Enable Terms and Conditions","启用条款和条件"
 "Enabled","已启用"
 "Enter a New Address","输入新地址"
-"Enter your coupon code if you have one.","如果您有优惠代码，请输入。"
+"Enter your coupon code if you have one.","如果您有优惠码，请输入。"
 "Enter your destination to get a shipping estimate.","输入您的目的地来获得预计运送信息。"
 "Estimate","预估"
 "Estimate Shipping and Tax","预计运费和税费"
