打折翻译修改

--- a/locale/zh_CN/Mage_Catalog.csv
+++ b/locale/zh_CN/Mage_Catalog.csv
@@ -128,7 +128,7 @@
 "Buy %1$s for","购买 %1$s："
 "Buy %1$s for %2$s","为 %2$s 购买 %1$s"
 "Buy %1$s for %2$s (%3$s incl. tax) each","为每 %2$s（%3$s 含税）购买 %1$s"
-"Buy %1$s for %2$s each","为每 %2$s 购买 %1$s"
+"Buy %1$s for %2$s each","买 %1$s 个以上，每个只要 %2$s"
 "Cache Lifetime (Seconds)","缓存生存时间（秒）"
 "Cache refresh needed.","需要刷新缓存。"
 "Can be Divided into Multiple Boxes for Shipping","可拆分为多个箱发货"
@@ -834,7 +834,7 @@
 "You may also be interested in the following product(s)","您还可能对下列产品感兴趣"
 "Zoom In","放大"
 "Zoom Out","缩小"
-"and","和"
+"and","可"
 "and above","及以上"
 "categories","类别"
 "each","每个"
@@ -843,7 +843,7 @@
 "per page","每页"
 "products","产品"
 "px.","像素"
-"save","保存"
+"save","省下"
 "select all","全选"
 "unselect all","撤销全选"
 "x","x"
