编辑电子邮件地址->电子邮件地址

--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -118,7 +118,7 @@
 "Edit Your Cart","编辑您的购物车"
 "Edit item","编辑商品"
 "Edit item parameters","编辑商品参数"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Empty Cart","清空购物车"
 "Empty Shopping Cart Content Before","清空购物车内容前："
 "Enable Onepage Checkout","启用单页面结账"
