--- a/locale/zh_CN/Mage_Install.csv
+++ b/locale/zh_CN/Mage_Install.csv
@@ -35,7 +35,7 @@
 "Download Magento Core Modules and Updates","下载Magento核心模块和更新"
 "Downloading and installing Magento, please wait...","正在下载和安装Magento，请稍候..."
 "Email","电子邮件"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Enable Charts","启用图表"
 "Enable this option if you want the charts to be displayed on Dashboard.","如果希望在仪表板上显示图表，就选中该选项。"
 "Enable this option only if you have SSL available.","如果您可以使用SSL，就选中该选项。"
