--- a/locale/zh_CN/Mage_Oauth.csv
+++ b/locale/zh_CN/Mage_Oauth.csv
@@ -47,7 +47,7 @@
 "Edit","编辑"
 "Edit Consumer","Edit Consumer"
 "Email","电子邮件"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Enable","启用"
 "Enabled","已启用"
 "Entry with ID #%s not found.","Entry with ID #%s not found."
