--- a/locale/zh_CN/Mage_Paypal.csv
+++ b/locale/zh_CN/Mage_Paypal.csv
@@ -200,7 +200,7 @@
 "Edit","编辑"
 "Edit Payment Information","编辑支付信息"
 "Edit Shopping Cart","编辑购物车"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Email Associated with PayPal Merchant Account","关联给PayPal银行帐户的电子邮件地址"
 "Email Associated with PayPal Merchant Account (Optional)","Email Associated with PayPal Merchant Account (Optional)"
 "Enable Automatic Fetching","启用自动获取"
