--- a/locale/zh_CN/Mage_Persistent.csv
+++ b/locale/zh_CN/Mage_Persistent.csv
@@ -19,7 +19,7 @@
 "Country","国家"
 "Create an Account","创建帐户"
 "Easy access to your order history and status","轻松访问您的订单历史记录和状态"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Enable ""Remember Me""","启用“记住我”"
 "Enable Persistence","启用保留"
 "Fast and easy check out","方便快捷的结账"
