--- a/locale/zh_CN/Mage_Sendfriend.csv
+++ b/locale/zh_CN/Mage_Sendfriend.csv
@@ -4,7 +4,7 @@
 "At least one recipient must be specified.","必须至少指定一个收件人。"
 "Back","返回"
 "Catalog Product Email to a Friend","将分类产品用邮件发送给朋友"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Email Address:","电子邮件地址："
 "Email Templates","邮件模板"
 "Email to a Friend","给朋友发邮件"
