--- a/locale/zh_CN/Mage_Sales.csv
+++ b/locale/zh_CN/Mage_Sales.csv
@@ -218,7 +218,7 @@
 "Edit Order %s %s Address","编辑订单 %s %s地址"
 "Edit Order Status","编辑订单状态"
 "Email","电子邮件"
-"Email Address","编辑电子邮件地址"
+"Email Address","电子邮件地址"
 "Email Copy of Credit Memo","信用记录副本用邮件发送"
 "Email Copy of Invoice","发票副本用邮件发送"
 "Email Copy of Shipment","运单副本用邮件发送"
