保存账单地址并使用作送货地址时，在继续那步校验邮编

--- a/locale/zh_CN/Mage_Checkout.csv
+++ b/locale/zh_CN/Mage_Checkout.csv
@@ -31,6 +31,7 @@
 "Back to Shopping Cart","返回到购物车"
 "Based on your selection, you may be interested in the following items:","根据您的选择，您可能对下列内容感兴趣："
 "Billing Address","账单地址"
+"Billing Address","账单地址"
 "Billing Information","账单信息"
 "Billing Information - %s","账单信息 - %s"
 "Can not remove the item.","无法移除此商品。"
@@ -306,6 +307,7 @@
 "Some products quantities were recalculated because of quantity increment mismatch","由于数量增量不匹配，部分产品数量已被重新计算"
 "Sorry, guest checkout is not enabled. Please try again or contact store owner.","很抱歉，来宾结账尚未启用。请重试或联系商店店主。"
 "Sorry, no quotes are available for this order at this time.","抱歉，该地址暂时不支持送货"
+"Sorry, no quotes are available for this order at this time. Plase return previous step and modify the zipcode","抱歉，该地址暂时不支持送货，请返回上一步修改送货地址及邮编"
 "State/Province","州/省"
 "Status","状态"
 "Store View","店铺视图"
